<resources>
    <string name="app_name">AiresPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="music">Music</string>
    <string name="musics">Musics</string>
    <string name="album">Album</string>
    <string name="albuns">Albuns</string>
    <string name="artist">Artists</string>

    <string name="reproduce">Play next</string>
    <string name="add_queue">Add to playing queue</string>
    <string name="add_playlist">Adicionar à playlist</string>
    <string name="edit_tag">Edit Tags</string>
    <string name="tag_editor">Tag Editor</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="delete_media">Delete Media</string>
    <string name="empty">No media found :(</string>
    <string name="play_list">Play List</string>

    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="track">Track</string>

</resources>
