<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:background="@drawable/ripple"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    card_view:cardUseCompatPadding="true">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      tools:context="com.airesplayer.EditTagActivity">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text="@string/name"
                                android:lines="1"
                                android:textSize="14sp"/>

                            <EditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:lines="1"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text="@string/album"
                                android:lines="1"
                                android:textSize="14sp"/>

                            <EditText
                                android:id="@+id/album"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:lines="1"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text="@string/artist"
                                android:lines="1"
                                android:textSize="14sp"/>

                            <EditText
                                android:id="@+id/artist"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:lines="1"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text="@string/year"
                                android:lines="1"
                                android:textSize="14sp"/>

                            <EditText
                                android:id="@+id/year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:lines="1"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text="@string/track"
                                android:lines="1"
                                android:textSize="14sp"/>

                            <EditText
                                android:id="@+id/track"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:lines="1"
                                android:textSize="16sp"/>

        </LinearLayout>

</android.support.v7.widget.CardView>